Fix footer on mobile

--- a/theme/styles/common.css
+++ b/theme/styles/common.css
@@ -1230,6 +1230,7 @@ ul.grid-halves {
 .appearences__item-contents header p {
     margin: 0;
     font-size: 14px;
+    font-weight: bold;
 }
 .appearences__item-contents aside {
     justify-self: flex-end;
@@ -1269,7 +1270,7 @@ ul.grid-halves {
     max-height: 216px;
     min-width: 120px;
     overflow: hidden;
-    margin: 0 0 0 0;
+    margin: 0 20px 0 0;
     padding: 0;
     border-radius: 5px 0 0 5px;
 }
@@ -1304,7 +1305,7 @@ ul.grid-halves {
 }
 .voice-actor__descriptions {
     display: flex;
-    margin: 20px;
+    margin: 20px 20px 20px 0;
     flex-direction: column;
     min-width: 180px;
     max-width: 200px;
@@ -1523,6 +1524,9 @@ ul.grid-halves {
     .home-footer ul li {
         padding-top: 20px;
     }
+    .home-footer ul li.no-xs {
+        display: none;
+    }
 
     .home-footer .internal-space {
         flex-direction: column;
@@ -1536,6 +1540,7 @@ ul.grid-halves {
         font-size: 12px;
         line-height: 20px;
         text-align: center;
+        display: block;
     }
 }
 
@@ -1953,44 +1958,3 @@ ul.grid-halves {
         display: none;
     }
 }
-
-.header-with-filter {
-    display: flex;
-}
-
-.landing-section-box .header-with-double-filter {
-    display: flex;
-    margin-bottom: 60px;
-}
-
-.filter-container {
-    position: absolute; 
-    right: 0;
-}
-
-.search {
-    margin: 0 0 5px 0;
-}
-
-.search__field {
-    text-indent: 5px;
-    max-width: 300px;
-    width: 100%;
-    height: 30px;
-    border: 1px solid #cfcfcf;
-    border-radius: 0.25em;
-    outline: none;
-}
-
-.custom-select {
-    width: 100%;
-    max-width: 300px;
-    min-width: 100px;
-    border: 1px solid #cfcfcf;
-    border-radius: 0.25em;
-    padding: 0.25em 0.5em;
-    cursor: pointer;
-    line-height: 1.1;
-    background-color: #fff;
-    background-image: linear-gradient(to top, #f9f9f9, #fff 33%);
-  }
